frontend/bugfix: ChatBubble timestamp wrapping
Fixes #106

--- a/wetty-chat-mobile/src/components/chat/ChatBubble.module.scss
+++ b/wetty-chat-mobile/src/components/chat/ChatBubble.module.scss
@@ -180,6 +180,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .messageText {
